# agno

agno_cli/: README.md  pyproject.toml
agno_cli/agno_cli/: client.py  config.py  console.py  main.py
agno_cli/agno_cli/commands/: agents.py  config_cmd.py  evals.py  knowledge.py  memories.py  metrics.py  models.py  sessions.py  status.py  teams.py  traces.py  workflows.py
cookbook/05_agent_os/interfaces/agent_protocol/: README.md  async_subagent_example.py  basic.py  client_example.py  server.py  test_curl.sh  test_server.py
cookbook/agent_concepts/knowledge/: youtub_kb_async.py
cookbook/examples/apps/mcp_agent/: README.md  agents.py  app.py  requirements.txt  utils.py
cookbook/tools/mcp/: agno_mcp.py  agno_mcp_test.py  mcp_auto_init_workflow.py  mcp_toolbox_for_db.py
cookbook/tools/mcp/mcp_agent/: README.md
cookbook/tools/mcp/mcp_agent/examples/: agentos_with_mcp_workflow.py  simple_agent.py  workflow_agent.py
cookbook/tools/mcp/mcp_toolbox_demo/: README.md  agent.py  agent_os.py  hotel_management_workflows.py  playground.py  pyproject.toml
cookbook/tools/mcp/mcp_toolbox_demo/config/: init.sql  tools.yaml
libs/agno/: pyproject.toml
libs/agno/agno/agent/: __init__.py  agent.py  mcp_agent.py
libs/agno/agno/client/agent_protocol/: __init__.py  client.py
libs/agno/agno/models/ibm/: watsonx.py
libs/agno/agno/os/: app.py
libs/agno/agno/os/interfaces/agent_protocol/: __init__.py  agent_protocol.py  router.py  utils.py
libs/agno/agno/tools/: mcp_toolbox.py
libs/agno/tests/integration/knowledge/: test_youtube_knowledge_base.py
libs/agno/tests/unit/client/: test_agent_protocol_client.py
libs/agno/tests/unit/os/interfaces/: test_agent_protocol.py  test_agent_protocol_full.py
libs/agno/tests/unit/reader/: test_async_youtube_reader.py
