[project]
name = "mcp-toolbox-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno",
    "mcp>=1.12.2",
    "openai>=1.97.1",
    "toolbox-core>=0.4.0",
]

[tool.uv.sources]
agno = { path = "../../../../libs/agno", editable = true }
